--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.button {
+/*.button {
     background-image: url('../images/UBER_API_Button_1x_Grey_9px_round.png');
     background-size: cover;
     width: 280px;
@@ -11,9 +11,7 @@
     margin-top: 2%;
     padding-top: 12px;
     padding-right: 14px;
-};
-* {
-    */ border: 2px solid red;
+};*/
 }
 .header {
 	text-align: center;
@@ -32,4 +30,47 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-  };
+ };
+.button {
+    background-image: url("assets/images/uber.png");
+    background-size: cover;
+    width: 280px;
+    height: 44px;
+    margin: 0 auto;
+    text-align: left;
+}
+.center {
+    margin: auto;
+    width: 75%;
+    padding: 0px;
+}
+#time {
+    text-align: right;
+    margin-top: 2%;
+    padding-top: 12px;
+    padding-right: 14px;
+}
+#map {
+  border: 2px solid black;
+}
+input {
+  margin: 2px;
+}
+.header {
+    text-align: center;
+    font-size: 80px;
+  font-family: monospace;
+}
+.userInput {
+    margin: auto;
+}
+.googleMap {
+   width: 100%;
+   width: -moz-available;
+   width: -webkit-fill-available;
+}
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
